# core-cpu-monitor

./: README.md  justfile  main.py  pyproject.toml  rcloneignore.txt
.github/workflows/: cd.yaml  main.yaml
src/: domain.py
src/cc_statusq_cpu/: __init__.py
src/cc_statusq_cpu/capsule/: ConsoleObserver.py  ConsoleSubscriber.py  FileObserver.py  PsutilCPUProvider.py  __init__.py
src/cc_statusq_cpu/core/: CPUEvent.py  CPUEventBus.py  CPUEventSubscriber.py  CPUObserver.py  CPUProvider.py  CPUStatus.py  StatusqCPU.py  __init__.py
src/core_cpu_monitor/: domain.py
tests/: conftest.py  test_CPUStatus.py  test_CSVObserver.py  test_ConsoleObserver.py  test_PsutilCPUProvider.py  test_StatusqCPU_attach.py  test_StatusqCPU_notify.py  test_StatusqCPU_run_continuous_monitoring.py  test_StatusqCPU_run_single_check.py  test_run.py  test_unit.py
