[project]
name = "cc.statusq-cpu"
version = "0.8.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "core-log-engine>=0.2.2",
    "gitchangelog>=3.0.4",
    "psutil>=7.2.2",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
[tool.ruff]
# Longitud máxima de línea (estándar es 88 o 100)
line-length = 130

[tool.ruff.lint]
# Selecciona las reglas a aplicar
# E: pycodestyle, F: Pyflakes, I: isort (orden de imports)
select = ["E", "F", "I"]
# Ignora reglas específicas si te resultan molestas
ignore = []

[tool.ruff.format]
# Ruff también puede formatear tu código automáticamente
quote-style = "double"
